=== (ongoing) ===


=== 0.5.2 ===

- Fixed tests

=== 0.5.1 ===

- Fixed clean methods for tags

=== 0.5 ===

- Added the TaggingFormMixin
- Added jquery-typeahead-tagging

=== 0.4 ===

- updated TagManager with get_for_queryset method

=== 0.3 ===

- added TagManager

=== 0.2 ===

- simplifications

=== 0.1 ===

- Initial commit